# Sandbox-Detector

./: CMakeLists.txt  LICENSE  README.md  toolchain-mingw64.cmake
examples/: ExamplePlugin.cpp
include/core/: IPlugin.hpp  PluginManager.hpp
include/plugins/: AntiDebugPlugin.hpp  EnvironmentPlugin.hpp  ExceptionPlugin.hpp  FileSystemPlugin.hpp  HardwarePlugin.hpp  HypervisorPlugin.hpp  MemoryPlugin.hpp  NativeApiPlugin.hpp  NetworkPlugin.hpp  ProcessPlugin.hpp  RegistryPlugin.hpp  ServicePlugin.hpp  TimingPlugin.hpp  TokenPrivilegePlugin.hpp  WmiPlugin.hpp
include/utils/: SehCompat.hpp  WinApiUtils.hpp
src/: main.cpp
src/core/: IPlugin.cpp  PluginManager.cpp  PluginManagerSEH.cpp
src/plugins/: AntiDebugPlugin.cpp  EnvironmentPlugin.cpp  ExceptionPlugin.cpp  FileSystemPlugin.cpp  HardwarePlugin.cpp  HypervisorPlugin.cpp  MemoryPlugin.cpp  NativeApiPlugin.cpp  NetworkPlugin.cpp  ProcessPlugin.cpp  RegistryPlugin.cpp  ServicePlugin.cpp  TimingPlugin.cpp  TokenPrivilegePlugin.cpp  WmiPlugin.cpp
src/utils/: WinApiUtils.cpp
test/: plugin_test.cpp
